simulation compiles, but runtime errors

--- a/smartpointers/pimpl/makefile
+++ b/smartpointers/pimpl/makefile
@@ -1,6 +1,6 @@
 
 GCC = g++ -g -std=c++14 -Wall -Wextra
-VALGRIND = valgrind --tool=memcheck --leak-check=yes
+VALGRIND = valgrind --tool=memcheck --leak-check=full --show-leak-kinds=all
 
 main: SmartPtr.h BasePtr.h UniquePtr.h SharedPtr.h main.cpp
 	$(GCC) main.cpp -o main
@@ -11,3 +11,9 @@ test: main
 
 clean:
 	rm main
+
+sim: simulate.cpp simulation.h simulation.cpp SmartPtr.h UniquePtr.h SharedPtr.h
+	$(GCC) simulation.cpp simulate.cpp -o sim
+
+test-sim: sim
+	$(VALGRIND) ./sim
